COP_290_Assignment1-main/static/style.css
/* style.css */
body {
    font-family: 'Arial', sans-serif;
    background-color: #f2f2f2;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
    margin: 0;
}

.login-container {
    background-color: white;
    padding: 40px;
    border-radius: 10px;
    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
    width: 300px;
}

.login-container h2 {
    text-align: center;
    margin-bottom: 20px;
}

.form-group {
    margin-bottom: 15px;
}

input[type="text"], input[type="password"] {
    width: 100%;
    padding: 10px;
    border: 1px solid #ddd;
    border-radius: 5px;
    box-sizing: border-box;
}

button {
    width: 100%;
    padding: 10px;
    border: none;
    background-color: #007bff;

}
    /* Add this to your existing style.css */

.welcome-container {
    text-align: center;
    background-color: white;
    padding: 40px;
    border-radius: 10px;
    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
    width: 300px;
    margin: auto;
}

.welcome-container h1 {
    margin-bottom: 20px;
}

.logout-button {
    display: inline-block;
    padding: 10px 20px;
    background-color: #dc3545;
    color: white;
    border-radius: 5px;
    text-decoration: none;
}

.logout-button:hover {
    background-color: #c82333;
}

div.StockListAndSearch{
    width: 20%;
    height:100%;
    background-color: gray;
    align-items:flex-start;
}
div.GraphAndStockInfo{
    width:80%;
    height:100%;
    background-color: rebeccapurple;
}
div.LoginInfo{
    width:100%;
    height:10%;
    background-color: black;
    font-size: 60px;
    text-align: right;
    color: white;
}
div.GraphDiv{
    width:100%;
    height:100%;
    background-color: turquoise;
}
div.GraphContainer{
    width: 80%;
    height: 100%;
}
table.StockDataTable{
    border-collapse: collapse;
    border: 1px solid;
}
th.StockDataTable{
    border: 1px solid;
    background-color: #1a89ff;
}
tr.StockDataTable:nth-child(odd){
    border: 1px solid;
    background-color: #e9f5ff;
}
tr.StockDataTable:nth-child(even){
    border: 1px solid;
    background-color: #8accf5;
}
td.StockDataTable{
    border: 1px solid;
}
td.TableHeading{
    font-size: 32px;
}
table.TableHeading{
    width: 100%;
    text-align: center;
}
div.HeadingContainer{
    width: 100%;
}
div.TableContainer{
    width:80%;
    height:90%;
    overflow: auto;
    padding-top: 50px;
}
div.IndividualTable{
    width: 80%;
    height: 600px;
    overflow: auto;
    align-items: center;
    background-color: bisque;
    margin: 0 auto;
    padding: 20px;
    margin-top: 30px;
}
div.StockSearchDiv{
    display: flex;
    justify-content: space-between;
    width: 100%;
    align-items: center;
}
div.StockInfo{
    width: 20%;
    height: 100%;
    background-color: turquoise;
}
div.StockInfoAndGraph{
    position: relative;
    height: 90%;
    display: flex;
}
input.SearchBar{
    font-size: 32px;
    padding: 10px;
    margin: 5px;
    width: 75%;
}
p.StockItem{
    padding: 10px;
    border-left: 5px solid red;
    margin-left: 5px;
    margin-right: 10px;
    margin-top: 5px;
    background-color: white;
    border-radius: 5px;
}

